# stm32f7x7

./: Cargo.toml  README.md
resource/: STM32F7x7.svd
